Add spin phrases and animations to enhance user experience

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Wheel of Fortune</title>
+  <title>Blamer</title>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -28,6 +29,7 @@
     <section id="wheelWrap" class="wheel-wrap">
       <div class="pointer" aria-hidden="true"></div>
       <canvas id="wheel" width="520" height="520"></canvas>
+      <p id="spinPhrase" class="spin-phrase" aria-live="polite"></p>
     </section>
   </main>
 
